# TASTE-SAMV71-Runtime

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h  TimerTaskMemory.c
src/: CMakeLists.txt
src/BrokerLock/: BrokerLock.c  BrokerLock.h  CMakeLists.txt
src/FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
src/HAL/: CMakeLists.txt  Hal.c  Hal.h  UsartRegisters.h
src/Hal/: CMakeLists.txt  Hal.c  Hal.h  UsartRegisters.h
src/Init/: CMakeLists.txt  Init.c  Init.h
src/Xdmac/: CMakeLists.txt  Xdmac.c  Xdmac.h  XdmacRegisters.h  component_xdmac.h  xdma_hardware_interface.c  xdma_hardware_interface.h  xdmac.c  xdmac.h  xdmad.c  xdmad.h
src/app/: CMakeLists.txt  main.c
src/appASM/: CMakeLists.txt  main.c
src/appXDMAC/: CMakeLists.txt  main.c
src/appXdmac/: CMakeLists.txt  main.c
src/hwas/: CMakeLists.txt  Hwas.xml  HwasComponent.xml  hwas.c  hwas.h
src/hwas/dataview/: dataview-uniq.c  dataview-uniq.h
src/uartXdmacDemo/: CMakeLists.txt  main.c
toolchains/: samv71.cmake
